# goldfinch

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
chain/: chain.py  small_geojson.json  test.py
docker/: Dockerfile
indicator/: environment.yml  hdd.py  test.py
src/goldfinch/processes/indicator/: hdd.cwl  hdd.py
src/goldfinch/processes/subset/: environment.yml  poly_subset.cwl  poly_subset.py
src/goldfinch/utils/: click2cwl_cli.py
src/processes/subset/: package.cwl
src/utils/: click2cwl_cli.py
subset/: poly_subset.py  small_geojson.json  test.py
tests/utils/: test_click2clw_cli.py
