[build-system]
requires = ["setuptools>=78.1.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "goldfinch"
version = "0.1.0"
description = "Climate service processes defined through CWL."
authors = [
    { name = "Francis Charette-Migneault", email = "francis.charette.migneault@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "click",
    "click2cwl @ git+https://github.com/Terradue/click2cwl"
]

[project.scripts]
click2cwl = "click2cwl.click2cwl_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
# any additional dependencies needed by underlying processes
# this is only to facilitate installation "all-in-one"
processes = [
    "clisops",
    "geopandas",
    "xclim",
    "h5netcdf",
]
